--- a/src/XelsDesktopWalletApp/XelsDesktopWalletApp.csproj
+++ b/src/XelsDesktopWalletApp/XelsDesktopWalletApp.csproj
@@ -69,6 +69,10 @@
   <ItemGroup>
     <Resource Include="Assets\Images\home-xels-logo-01.png" />
     <Resource Include="Assets\Images\loading-3.gif" />
+  </ItemGroup>  
+
+  <ItemGroup>
+    <Folder Include="File\" />
   </ItemGroup>
 
 </Project>
