--- a/src/Xels.CCPegD/Xels.CCPegD.csproj
+++ b/src/Xels.CCPegD/Xels.CCPegD.csproj
@@ -3,9 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.0.7.0</Version>
+    <Version>5.0.7.0</Version>
     <Authors>Xels Group Ltd.</Authors>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+    <SignAssembly>true</SignAssembly>
+    <DelaySign>false</DelaySign>
+    <AssemblyOriginatorKeyFile>XelsSigningKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
