--- a/src/XelsDesktopWalletApp/XelsDesktopWalletApp.csproj
+++ b/src/XelsDesktopWalletApp/XelsDesktopWalletApp.csproj
@@ -8,7 +8,7 @@
     <ApplicationIcon>icon.ico</ApplicationIcon>
     <NoWin32Manifest>true</NoWin32Manifest>
     <Version>5.0.0</Version>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <DelaySign>false</DelaySign>
     <AssemblyOriginatorKeyFile>XelsSigningKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
