import sels/bels with mnemonics

--- a/src/XelsDesktopWalletApp/XelsDesktopWalletApp.csproj
+++ b/src/XelsDesktopWalletApp/XelsDesktopWalletApp.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="dotnetstandard-bip39" Version="1.0.2" />
     <PackageReference Include="MaterialDesignColors" Version="2.0.1" />
     <PackageReference Include="MaterialDesignThemes" Version="4.1.0" />
     <PackageReference Include="Nethereum.Web3" Version="3.8.0" />
