Dashboard Stacking and not stacking thamps up and thamps down image display configration

--- a/src/XelsDesktopWalletApp/XelsDesktopWalletApp.csproj
+++ b/src/XelsDesktopWalletApp/XelsDesktopWalletApp.csproj
@@ -28,6 +28,8 @@
     <None Remove="Assets\Images\home-xels-logo-01.png" />
     <None Remove="Assets\Images\icon.ico" />
     <None Remove="Assets\Images\loading-3.gif" />
+    <None Remove="Assets\Images\thumbsdown.png" />
+    <None Remove="Assets\Images\thumbsup.png" />
     <None Remove="Views\home-xels-logo-01.png" />
   </ItemGroup>
 
@@ -71,6 +73,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Assets\Images\loading-3.gif" />
+    <Resource Include="Assets\Images\thumbsdown.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\Images\thumbsup.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>  
 
   <ItemGroup>
