--- a/src/Xels.CCPegD/Properties/launchSettings.json
+++ b/src/Xels.CCPegD/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Xels.CCPegD": {
       "commandName": "Project",
-      "commandLineArgs": "-sidechain"
+      "commandLineArgs": "-mainchain"
     }
   }
 }
