--- a/src/XelsDesktopWalletApp/XelsDesktopWalletApp.csproj
+++ b/src/XelsDesktopWalletApp/XelsDesktopWalletApp.csproj
@@ -32,6 +32,7 @@
     <None Remove="Assets\Images\redCircle.png" />
     <None Remove="Assets\Images\thumbsdown.png" />
     <None Remove="Assets\Images\thumbsup.png" />
+    <None Remove="icon.ico" />
     <None Remove="Token\TokenFile.txt" />
     <None Remove="Views\home-xels-logo-01.png" />
     <None Remove="Views\Pages\loading-3.gif" />
@@ -50,6 +51,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="icon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Token\TokenFile.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
