ccpegd - shortcut method , icon added, publish v -61 ccminerd, wpf -   icon added, publish - v-50 wpf -   icon added

--- a/src/Xels.CCMinerD/Xels.CCMinerD.csproj
+++ b/src/Xels.CCMinerD/Xels.CCMinerD.csproj
@@ -7,7 +7,12 @@
     <Authors>Xels Group Ltd.</Authors>
     <Company>Xels Group Ltd.</Company>
     <Product />
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <COMReference Include="IWshRuntimeLibrary">
@@ -22,6 +27,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="icon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Xels.Bitcoin.Features.Api\Xels.Bitcoin.Features.Api.csproj" />
     <ProjectReference Include="..\Xels.Bitcoin.Features.Notifications\Xels.Bitcoin.Features.Notifications.csproj" />
     <ProjectReference Include="..\Xels.Bitcoin.Features.SignalR\Xels.Bitcoin.Features.SignalR.csproj" />
@@ -29,12 +40,6 @@
     <ProjectReference Include="..\Xels.Features.Collateral\Xels.Features.Collateral.csproj" />
     <ProjectReference Include="..\Xels.Features.SQLiteWalletRepository\Xels.Features.SQLiteWalletRepository.csproj" />
     <ProjectReference Include="..\Xels.Sidechains.Networks\Xels.Sidechains.Networks.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Interop.IWshRuntimeLibrary">
-      <HintPath>..\XelsDesktopWalletApp\obj\Debug\netcoreapp3.1\Interop.IWshRuntimeLibrary.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
