--- a/src/XelsPCHDesktopWalletApp/XelsPCHDesktopWalletApp.csproj
+++ b/src/XelsPCHDesktopWalletApp/XelsPCHDesktopWalletApp.csproj
@@ -304,4 +304,8 @@
     </Page>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
+
 </Project>
